// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen gvpIVRProfiles config import-export] should create the gvpIVRProfiles: the gvpIVRProfiles have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ gvpivrprofile [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen gvpIVRProfiles config import-export] should skip the same gvpIVRProfiles: the gvpIVRProfiles have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= gvpivrprofile [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen gvpIVRProfiles config import-export] should throw exception when new gvpIVRProfiles to import miss mandatory properties gvpIVRProfiles: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - gvpivrprofile [emptyCfgObjectTest]:
    - displayName
    - tenant
",
  "stdout": "",
}
`;

exports[`[mutagen gvpIVRProfiles config import-export] should update the modified gvpIVRProfiles: the modified gvpIVRProfiles have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ gvpivrprofile [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
